# f2

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh
kernels/: pbf.cl
shaders/: bilateral.frag  bilateral.vert  plane.frag  plane.vert  points.frag  points.vert  screen.frag
src/: CMakeLists.txt  main.cpp
src/core/: accel.cpp  accel.h  app.cpp  app.h  input.cpp  input.h  sim.cpp  sim.h  view.cpp  view.h
src/gl/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  program.cpp  program.h  texture.cpp  texture.h
src/pbf/: fluid-renderer.cpp  fluid-renderer.h  fluid.cpp  fluid.h
src/scene/: camera.cpp  camera.h  scene.cpp  scene.h  thing.cpp  thing.h
src/scene/geometry/: plane.cpp  plane.h
